WeeChat - Wee Enhanced Environment for Chat
===========================================

ChangeLog - 2008-05-11


Version 0.2.7 (under dev!):
   * new input action "set_unread_current_buffer" to set unread marker for
     current buffer only (task #7286)
   * new option "xfer.file.use_nick_in_filename" for Xfer files (task #7140)
   * removed key functions, replaced by /input command
   * fixed bug with alias, use current buffer to run commands (bug #22876)
   * new names for config files (*.conf instead of *.rc)
   * improved /set command, new command /unset (task #6085)
   * added new type of buffer, with free content
   * added tags for lines and custom filtering by tags or regex (task #7674)
   * added custom bars, with custom items
   * command /whois is now authorized in private without argument (task #7482)
   * removed kernel info in CTCP VERSION reply (IRC plugin) (task #7494)
   * use of many addresses for one IRC server (auto-switch when a connexion
     fails), nicks are now set with one option "nicks" (task #6088)
   * fixed bug when switching window, scrollback is now preserved (task #7680)
   * added group support in nicklist
   * added "backlog" and "name_lower_case" options in logger plugin (bug #19522)
   * improved main loop: higher timout in select(), less CPU usage
   * added /reload command to reload WeeChat and plugins config files
     (signal SIGHUP is catched to reload config files)
   * new plugins: IRC, alias, demo, fifo, logger, trigger, xfer
   * added hooks: command, timer, file descriptor, print, signal, config,
     completion, modifier
   * new plugin API with many new functions: hooks, buffer management, bars,
     config files, lists
   * new display engine, with prefix and message for each line
   * fixed nick completion bug (missing space after nick)

Version 0.2.6 (2007-09-06):
   * fixed bug with log of plugin messages (option log_plugin_msg)
   * added new option "deloutq" to /server command to delete all servers