@@ -39,6 +39,7 @@ extern struct t_config_option *xfer_config_network_blocksize;
 extern struct t_config_option *xfer_config_network_fast_send;
 extern struct t_config_option *xfer_config_network_port_range;
 extern struct t_config_option *xfer_config_network_own_ip;
+extern struct t_config_option *xfer_config_network_speed_limit;
 
 extern struct t_config_option *xfer_config_file_download_path;
 extern struct t_config_option *xfer_config_file_upload_path;
