@@ -1,10 +1,11 @@
 WeeChat - Wee Enhanced Environment for Chat
 ===========================================
 
-ChangeLog - 2008-05-11
+ChangeLog - 2008-06-15
 
 
 Version 0.2.7 (under dev!):
+   * added speed limit for DCC files sending (task #6178)
    * new input action "set_unread_current_buffer" to set unread marker for
      current buffer only (task #7286)
    * new option "xfer.file.use_nick_in_filename" for Xfer files (task #7140)
